--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 addons:
   sonarcloud:
-    organization: "sanogotech"
+    organization: "sonarQube"
     token:
-      secure: "40a7da271b785f757f93fd9f2dffc6428297882a" # encrypted value of your token
+      secure: "b339b8101a7fec63f980c28279e57233881e759c" # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
