--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ addons:
   sonarcloud:
     organization: "yosraaouiene"
     token:
-      secure: "40a7da271b785f757f93fd9f2dffc6428297882a" # encrypted value of your token
+      secure: "935c7cd5fb7c3c2d9100cbb54097581a01fdf86e" # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=sanogotech_archijavajeespringboot
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=Sonar_YOSRA
